Archive2/85/ae8b3e5dce9d4d/output
+ g++-4.8 -std=c++11 -Wall -Wextra main.cpp
main.cpp: In function ‘int main()’:
main.cpp:18:28: error: no matching function for call to ‘bind(<unresolved overloaded function type>, int)’
     auto g = std::bind(f, 1); // error
                            ^
main.cpp:18:28: note: candidates are:
In file included from main.cpp:2:0:
/usr/include/c++/4.8/functional:1655:5: note: template<class _Func, class ... _BoundArgs> typename std::_Bind_helper<std::__or_<std::is_integral<typename std::decay<_Tp>::type>, std::is_enum<typename std::decay<_Tp>::type> >::value, _Func, _BoundArgs ...>::type std::bind(_Func&&, _BoundArgs&& ...)
     bind(_Func&& __f, _BoundArgs&&... __args)
     ^
/usr/include/c++/4.8/functional:1655:5: note:   template argument deduction/substitution failed:
main.cpp:18:28: note:   couldn't deduce template parameter ‘_Func’
     auto g = std::bind(f, 1); // error
                            ^
In file included from main.cpp:2:0:
/usr/include/c++/4.8/functional:1682:5: note: template<class _Result, class _Func, class ... _BoundArgs> typename std::_Bindres_helper<_Result, _Func, _BoundArgs>::type std::bind(_Func&&, _BoundArgs&& ...)
     bind(_Func&& __f, _BoundArgs&&... __args)
     ^
/usr/include/c++/4.8/functional:1682:5: note:   template argument deduction/substitution failed:
main.cpp:18:28: note:   couldn't deduce template parameter ‘_Result’
     auto g = std::bind(f, 1); // error
                            ^
